# TSAprojet

./: .gitattributes  .gitignore  65026achub-o.avif  CC-BY-NC-Images.md  LICENCE.md  README.md  generation_image.py  generation_image.txt  liste.txt  test.py
ComfyUI_windows_portable/: test.json  update.bat
ComfyUI_windows_portable/ComfyUI/custom_nodes/removebackgroundsuite/: .tracking  BIREFNET_FIX_README.md  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
ComfyUI_windows_portable/python_embeded/: _msi.pyd  winsound.pyd
image/: ImagePerso.json  ImagePersoAPI.json  ImagePersoAPIWithoutLayerMask.json  ImagePersoAPIwithoutLora.json  ImagePersoAPIwithoutLoraWithoutLayerMask.json  ImagePersoExport.json  bdd_images.xlsx  complete_prompt_from_AI.py  definition.csv  ecriture.sla  generation_image.txt  generation_liste_prompt_for_AI.py  generation_prompt_for_image.py  images.sla  kScribus.py  liste.csv  scribus_images.py  syllabe.sla  texte_lecture.sla
image/action/: action.json
image/astrologie/: astrologie.json
image/astronomie/: astronomie.json
image/boucherie/: boucherie.json
image/boulangerie/: boulangerie.json
image/chambre_dormir/: chambre_dormir.json
image/corps_humain/: corps_humain.json
image/cuisine/: cuisine.json
image/ecole/: ecole.json
image/equitation/: equitation.json
image/ete/: ete.json
image/ferme/: ferme.json
image/foret/: foret.json
phonetique/: phonetique.json  phonetique.py  phonetique.sla  scribus_phonetique.py
repas/: repas.py  repas.sla  repas.txt
travail/: travail.py  travail.sla  travail.txt
(+130 files in other folders)
