[project]
name = "removebackgroundsuite"
description = "A comprehensive matting toolkit for ComfyUI with support for multiple models including BiRefNet, RMBG, and advanced mask processing capabilities."
version = "1.2.4"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow", "torchvision", "opencv-python", "scipy", "transformers", "tqdm", "pymatting", "guided-filter", "vitmatte", "timm"]

[project.urls]
Repository = "https://github.com/whmc76/ComfyUI-RemoveBackgroundSuite"

[tool.comfy]
PublisherId = "whmc76"
DisplayName = "ComfyUI-RemoveBackgroundSuite"
Description = "A comprehensive matting toolkit for ComfyUI with support for multiple models including BiRefNet, RMBG, and advanced mask processing capabilities."
Version = "1.2.4"
Icon = "https://raw.githubusercontent.com/whmc76/ComfyUI-RemoveBackgroundSuite/main/icon.png"
includes = []
tags = ["matting", "background-removal", "image-processing", "mask-processing", "birefnet", "rmbg", "vitmatte"]
